--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MudBlazor" Version="7.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\Classes\Classes.csproj" />
+    <ProjectReference Include="..\Functions\Functions.csproj" />
+  </ItemGroup>
+
 </Project>
